<resources>
    <string name="app_name">ArtoZ</string>
    <string name="book">Buku</string>
    <string name="balance">Saldo</string>
    <string name="expense">Pengeluaran</string>
    <string name="income">Pemasukan</string>
    <string name="nominal">Nominal</string>
    <string name="save">Simpan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="other_category">Kategori lainnya</string>
    <string name="btn_update_transaction">Perbarui</string>
    <string name="transaction_updated">Transaksi diperbarui</string>
    <string name="transaction_saved">Transaksi berhasil disimpan!</string>
    <string name="invalid_input">Masukan tidak valid</string>
    <string name="add">Tambah</string>
    <string name="datepicker">Pilih Tanggal</string>
    <string name="back_to_start">Kembali ke halaman awal</string>
    <string name="detail_transaction">Detail Transaksi</string>
    <string name="category">Kategori</string>
    <string name="amount">Jumlah</string>
    <string name="date">Tanggal</string>
    <string name="edit">Edit</string>
    <string name="delete">Hapus</string>
    <string name="your_balance">Saldo Anda</string>
    <string name="empty_data">Tidak ada transaksi</string>
    <string name="no_transaction">Tidak ada transaksi</string>
    <string name="rp_0">Rp 0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="icon_balance">Ikon saldo</string>
    <string name="icon_income">Ikon pemasukan</string>
    <string name="total_income">Total Pemasukan</string>
    <string name="icon_expense">Ikon pengeluaran</string>
    <string name="total_expense">Total Pengeluaran</string>
    <string name="type">Type</string>
    <string name="transaction_icon">Transaction Icon</string>
    <string name="layout">Layout</string>
    <string name="search_hint">Cari transaksi...</string>
    <string name="icon">Ikon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">Tentang</string>
    <string name="name_ft">Faisal Triaputra</string>
    <string name="nim_ft">2230511042</string>
    <string name="name_mfh">Muhammad Fauzul Hanif</string>
    <string name="nim_mfh">2230511102</string>
    <string name="assetLabel">Asset yang Digunakan:</string>
</resources>