<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:elevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/gradient_background"
        android:padding="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_edit_note_24_large"
            android:contentDescription="@string/transaction_icon"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/light_purple"
                android:layout_marginBottom="4dp"/>

            <!-- Deskripsi Transaksi -->
            <TextView
                android:id="@+id/textCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <!-- Tanggal Transaksi -->
            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="13sp"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>

        <!-- Jumlah Transaksi -->
        <TextView
            android:id="@+id/textAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_0"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/red"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
