<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Saldo Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardElevation="6dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingTop="35dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_account_balance_wallet_24" />

            <TextView
                android:id="@+id/tvBalanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/your_balance"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBalanceAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/rp_0"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/chartTypeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cardBalance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/rbPie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pie"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rbBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bar" />
    </RadioGroup>


    <!-- Pie Chart WebView -->
    <WebView
        android:id="@+id/webView"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chartTypeGroup" />

    <!-- Income & Expense Summary -->
    <LinearLayout
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_border_down"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Income -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/income"
                app:tint="@color/green" />

            <TextView
                android:id="@+id/tvTotalIncomeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/total_income"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTotalIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/rp_0"
                android:textColor="@color/green"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Expense -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/expense"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/tvTotalExpenseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/total_expense"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTotalExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/rp_0"
                android:textColor="@color/red"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
